--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -1018,12 +1018,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d99a3b24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/coarse/GLU/GLU_R1_val_1.fq.gz\n",
+      "/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/coarse/GLU/GLU_R2_val_2.fq.gz\n",
+      "/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/coarse/GABA/GABA_R1_val_1.fq.gz\n",
+      "/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/coarse/GABA/GABA_R2_val_2.fq.gz\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "# STAR align// \n"
+    "%%bash\n",
+    "# STAR align// \n",
+    "\n",
+    "path=/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/coarse/\n",
+    "code_path=/cndd3/dburrows/CODE/deepNN_splice/STAR_align.sh\n",
+    "chmod u+x $code_path\n",
+    "scp $code_path $path/log.workspace\n",
+    "\n",
+    "cell_arr=(\"GLU\" \"GABA\")\n",
+    "for c in ${cell_arr[@]}\n",
+    "do\n",
+    "    curr=($(ls $path$c/*val*fq.gz))\n",
+    "    echo ${curr[0]}\n",
+    "    echo ${curr[1]}\n",
+    "    ./$code_path ${curr[0]} ${curr[1]} $path$c/\n",
+    "    samtools index $path$c/Aligned.sortedByCoord.out.bam\n",
+    "    \n",
+    "done\n",
+    "echo Done"
    ]
   },
   {
