mergeing gran cells

--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -50,450 +50,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "f139686d",
+   "cell_type": "markdown",
+   "id": "988db9c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cluster.annotation.csv\texon.counts.csv.gz    QC.csv\r\n",
-      "cluster.membership.csv\tintron.counts.csv.gz  sample_metadata.csv.gz\r\n"
-     ]
-    }
-   ],
    "source": [
-    "os.chdir('/cndd3/dburrows/DATA/public_datasets/splice/smartseq_mouse_p53-59_MOp_pachter21/')\n",
-    "#prac = pd.read_csv('exon.counts.csv.gz')\n",
-    "! ls\n",
-    "#awk '{$a=$5-$4;print $a}' GSM4800806_PFC_sc_Rep1_PacBio_processed.gff | head -50"
+    "# Make directories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "4bc8be61",
+   "execution_count": 3,
+   "id": "f139686d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>ar_id</th>\n",
-       "      <th>exp_component_vendor_name</th>\n",
-       "      <th>batch</th>\n",
-       "      <th>batch_vendor_name</th>\n",
-       "      <th>tube</th>\n",
-       "      <th>tube_internal_name</th>\n",
-       "      <th>tube_contents_nm</th>\n",
-       "      <th>tube_contents_nm_from_vendor</th>\n",
-       "      <th>tube_avg_size_bp</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Injection_type</th>\n",
-       "      <th>NewBatch</th>\n",
-       "      <th>Vendor</th>\n",
-       "      <th>MultiPlex</th>\n",
-       "      <th>percent_reads_aligned_to_rrna_rmsk</th>\n",
-       "      <th>percent_reads_aligned_to_trna_rmsk</th>\n",
-       "      <th>percent_reads_aligned_to_ncrna</th>\n",
-       "      <th>percent_reads_aligned_to_introns</th>\n",
-       "      <th>percent_reads_aligned_to_intergenic</th>\n",
-       "      <th>percent_reads_aligned_unique</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LS-15395_S41_E1-50</td>\n",
-       "      <td>543183476</td>\n",
-       "      <td>LS-15395-41</td>\n",
-       "      <td>R8S4-160812</td>\n",
-       "      <td>RSC-035</td>\n",
-       "      <td>LS-15395</td>\n",
-       "      <td>R8S4-16081206</td>\n",
-       "      <td>4.619923</td>\n",
-       "      <td>7.578116</td>\n",
-       "      <td>529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HistoricalData</td>\n",
-       "      <td>Covance</td>\n",
-       "      <td>index96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.162980</td>\n",
-       "      <td>9.855384</td>\n",
-       "      <td>3.264771</td>\n",
-       "      <td>84.993663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LS-15395_S42_E1-50</td>\n",
-       "      <td>543183474</td>\n",
-       "      <td>LS-15395-42</td>\n",
-       "      <td>R8S4-160812</td>\n",
-       "      <td>RSC-035</td>\n",
-       "      <td>LS-15395</td>\n",
-       "      <td>R8S4-16081206</td>\n",
-       "      <td>4.619923</td>\n",
-       "      <td>7.578116</td>\n",
-       "      <td>529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HistoricalData</td>\n",
-       "      <td>Covance</td>\n",
-       "      <td>index96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16.281620</td>\n",
-       "      <td>6.763949</td>\n",
-       "      <td>2.856108</td>\n",
-       "      <td>87.252036</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>LS-15395_S43_E1-50</td>\n",
-       "      <td>543183472</td>\n",
-       "      <td>LS-15395-43</td>\n",
-       "      <td>R8S4-160812</td>\n",
-       "      <td>RSC-035</td>\n",
-       "      <td>LS-15395</td>\n",
-       "      <td>R8S4-16081206</td>\n",
-       "      <td>4.619923</td>\n",
-       "      <td>7.578116</td>\n",
-       "      <td>529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HistoricalData</td>\n",
-       "      <td>Covance</td>\n",
-       "      <td>index96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14.448787</td>\n",
-       "      <td>13.283785</td>\n",
-       "      <td>4.473082</td>\n",
-       "      <td>84.439773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LS-15395_S44_E1-50</td>\n",
-       "      <td>543183470</td>\n",
-       "      <td>LS-15395-44</td>\n",
-       "      <td>R8S4-160812</td>\n",
-       "      <td>RSC-035</td>\n",
-       "      <td>LS-15395</td>\n",
-       "      <td>R8S4-16081206</td>\n",
-       "      <td>4.619923</td>\n",
-       "      <td>7.578116</td>\n",
-       "      <td>529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HistoricalData</td>\n",
-       "      <td>Covance</td>\n",
-       "      <td>index96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>16.687114</td>\n",
-       "      <td>7.724415</td>\n",
-       "      <td>3.083142</td>\n",
-       "      <td>87.400895</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LS-15395_S46_E1-50</td>\n",
-       "      <td>543183466</td>\n",
-       "      <td>LS-15395-46</td>\n",
-       "      <td>R8S4-160812</td>\n",
-       "      <td>RSC-035</td>\n",
-       "      <td>LS-15395</td>\n",
-       "      <td>R8S4-16081206</td>\n",
-       "      <td>4.619923</td>\n",
-       "      <td>7.578116</td>\n",
-       "      <td>529</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>HistoricalData</td>\n",
-       "      <td>Covance</td>\n",
-       "      <td>index96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15.844740</td>\n",
-       "      <td>8.100115</td>\n",
-       "      <td>3.478772</td>\n",
-       "      <td>85.846808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6295</th>\n",
-       "      <td>SM-GE92M_S092_E1-50</td>\n",
-       "      <td>708586022</td>\n",
-       "      <td>SM-GE92M-S092</td>\n",
-       "      <td>R8S4-180530</td>\n",
-       "      <td>RSC-157</td>\n",
-       "      <td>SM-GE92M</td>\n",
-       "      <td>R8S4-18053006</td>\n",
-       "      <td>3.249174</td>\n",
-       "      <td>1.950000</td>\n",
-       "      <td>392</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NewData</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>index384</td>\n",
-       "      <td>0.692675</td>\n",
-       "      <td>0.054178</td>\n",
-       "      <td>4.007977</td>\n",
-       "      <td>12.591947</td>\n",
-       "      <td>27.800393</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6296</th>\n",
-       "      <td>SM-GE92M_S093_E1-50</td>\n",
-       "      <td>708586372</td>\n",
-       "      <td>SM-GE92M-S093</td>\n",
-       "      <td>R8S4-180530</td>\n",
-       "      <td>RSC-157</td>\n",
-       "      <td>SM-GE92M</td>\n",
-       "      <td>R8S4-18053006</td>\n",
-       "      <td>3.249174</td>\n",
-       "      <td>1.950000</td>\n",
-       "      <td>392</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NewData</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>index384</td>\n",
-       "      <td>0.409496</td>\n",
-       "      <td>0.051422</td>\n",
-       "      <td>3.830221</td>\n",
-       "      <td>9.094367</td>\n",
-       "      <td>29.950267</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6297</th>\n",
-       "      <td>SM-GE92M_S094_E1-50</td>\n",
-       "      <td>708586078</td>\n",
-       "      <td>SM-GE92M-S094</td>\n",
-       "      <td>R8S4-180530</td>\n",
-       "      <td>RSC-157</td>\n",
-       "      <td>SM-GE92M</td>\n",
-       "      <td>R8S4-18053006</td>\n",
-       "      <td>3.249174</td>\n",
-       "      <td>1.950000</td>\n",
-       "      <td>392</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NewData</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>index384</td>\n",
-       "      <td>0.610336</td>\n",
-       "      <td>0.086938</td>\n",
-       "      <td>3.419039</td>\n",
-       "      <td>9.457431</td>\n",
-       "      <td>29.709904</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6298</th>\n",
-       "      <td>SM-GE92M_S095_E1-50</td>\n",
-       "      <td>708586242</td>\n",
-       "      <td>SM-GE92M-S095</td>\n",
-       "      <td>R8S4-180530</td>\n",
-       "      <td>RSC-157</td>\n",
-       "      <td>SM-GE92M</td>\n",
-       "      <td>R8S4-18053006</td>\n",
-       "      <td>3.249174</td>\n",
-       "      <td>1.950000</td>\n",
-       "      <td>392</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NewData</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>index384</td>\n",
-       "      <td>0.403770</td>\n",
-       "      <td>0.040953</td>\n",
-       "      <td>2.808983</td>\n",
-       "      <td>6.679797</td>\n",
-       "      <td>24.221576</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6299</th>\n",
-       "      <td>SM-GE92M_S096_E1-50</td>\n",
-       "      <td>708585886</td>\n",
-       "      <td>SM-GE92M-S096</td>\n",
-       "      <td>R8S4-180530</td>\n",
-       "      <td>RSC-157</td>\n",
-       "      <td>SM-GE92M</td>\n",
-       "      <td>R8S4-18053006</td>\n",
-       "      <td>3.249174</td>\n",
-       "      <td>1.950000</td>\n",
-       "      <td>392</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NewData</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>index384</td>\n",
-       "      <td>0.495241</td>\n",
-       "      <td>0.052688</td>\n",
-       "      <td>3.644872</td>\n",
-       "      <td>10.281444</td>\n",
-       "      <td>27.394723</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6300 rows × 122 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Unnamed: 0      ar_id exp_component_vendor_name        batch  \\\n",
-       "0      LS-15395_S41_E1-50  543183476               LS-15395-41  R8S4-160812   \n",
-       "1      LS-15395_S42_E1-50  543183474               LS-15395-42  R8S4-160812   \n",
-       "2      LS-15395_S43_E1-50  543183472               LS-15395-43  R8S4-160812   \n",
-       "3      LS-15395_S44_E1-50  543183470               LS-15395-44  R8S4-160812   \n",
-       "4      LS-15395_S46_E1-50  543183466               LS-15395-46  R8S4-160812   \n",
-       "...                   ...        ...                       ...          ...   \n",
-       "6295  SM-GE92M_S092_E1-50  708586022             SM-GE92M-S092  R8S4-180530   \n",
-       "6296  SM-GE92M_S093_E1-50  708586372             SM-GE92M-S093  R8S4-180530   \n",
-       "6297  SM-GE92M_S094_E1-50  708586078             SM-GE92M-S094  R8S4-180530   \n",
-       "6298  SM-GE92M_S095_E1-50  708586242             SM-GE92M-S095  R8S4-180530   \n",
-       "6299  SM-GE92M_S096_E1-50  708585886             SM-GE92M-S096  R8S4-180530   \n",
-       "\n",
-       "     batch_vendor_name      tube tube_internal_name  tube_contents_nm  \\\n",
-       "0              RSC-035  LS-15395      R8S4-16081206          4.619923   \n",
-       "1              RSC-035  LS-15395      R8S4-16081206          4.619923   \n",
-       "2              RSC-035  LS-15395      R8S4-16081206          4.619923   \n",
-       "3              RSC-035  LS-15395      R8S4-16081206          4.619923   \n",
-       "4              RSC-035  LS-15395      R8S4-16081206          4.619923   \n",
-       "...                ...       ...                ...               ...   \n",
-       "6295           RSC-157  SM-GE92M      R8S4-18053006          3.249174   \n",
-       "6296           RSC-157  SM-GE92M      R8S4-18053006          3.249174   \n",
-       "6297           RSC-157  SM-GE92M      R8S4-18053006          3.249174   \n",
-       "6298           RSC-157  SM-GE92M      R8S4-18053006          3.249174   \n",
-       "6299           RSC-157  SM-GE92M      R8S4-18053006          3.249174   \n",
-       "\n",
-       "      tube_contents_nm_from_vendor  tube_avg_size_bp  ...  Injection_type  \\\n",
-       "0                         7.578116               529  ...             0.0   \n",
-       "1                         7.578116               529  ...             0.0   \n",
-       "2                         7.578116               529  ...             0.0   \n",
-       "3                         7.578116               529  ...             0.0   \n",
-       "4                         7.578116               529  ...             0.0   \n",
-       "...                            ...               ...  ...             ...   \n",
-       "6295                      1.950000               392  ...             NaN   \n",
-       "6296                      1.950000               392  ...             NaN   \n",
-       "6297                      1.950000               392  ...             NaN   \n",
-       "6298                      1.950000               392  ...             NaN   \n",
-       "6299                      1.950000               392  ...             NaN   \n",
-       "\n",
-       "            NewBatch   Vendor MultiPlex percent_reads_aligned_to_rrna_rmsk  \\\n",
-       "0     HistoricalData  Covance   index96                                NaN   \n",
-       "1     HistoricalData  Covance   index96                                NaN   \n",
-       "2     HistoricalData  Covance   index96                                NaN   \n",
-       "3     HistoricalData  Covance   index96                                NaN   \n",
-       "4     HistoricalData  Covance   index96                                NaN   \n",
-       "...              ...      ...       ...                                ...   \n",
-       "6295         NewData    Broad  index384                           0.692675   \n",
-       "6296         NewData    Broad  index384                           0.409496   \n",
-       "6297         NewData    Broad  index384                           0.610336   \n",
-       "6298         NewData    Broad  index384                           0.403770   \n",
-       "6299         NewData    Broad  index384                           0.495241   \n",
-       "\n",
-       "     percent_reads_aligned_to_trna_rmsk percent_reads_aligned_to_ncrna  \\\n",
-       "0                                   NaN                      15.162980   \n",
-       "1                                   NaN                      16.281620   \n",
-       "2                                   NaN                      14.448787   \n",
-       "3                                   NaN                      16.687114   \n",
-       "4                                   NaN                      15.844740   \n",
-       "...                                 ...                            ...   \n",
-       "6295                           0.054178                       4.007977   \n",
-       "6296                           0.051422                       3.830221   \n",
-       "6297                           0.086938                       3.419039   \n",
-       "6298                           0.040953                       2.808983   \n",
-       "6299                           0.052688                       3.644872   \n",
-       "\n",
-       "      percent_reads_aligned_to_introns percent_reads_aligned_to_intergenic  \\\n",
-       "0                             9.855384                            3.264771   \n",
-       "1                             6.763949                            2.856108   \n",
-       "2                            13.283785                            4.473082   \n",
-       "3                             7.724415                            3.083142   \n",
-       "4                             8.100115                            3.478772   \n",
-       "...                                ...                                 ...   \n",
-       "6295                         12.591947                           27.800393   \n",
-       "6296                          9.094367                           29.950267   \n",
-       "6297                          9.457431                           29.709904   \n",
-       "6298                          6.679797                           24.221576   \n",
-       "6299                         10.281444                           27.394723   \n",
-       "\n",
-       "      percent_reads_aligned_unique  \n",
-       "0                        84.993663  \n",
-       "1                        87.252036  \n",
-       "2                        84.439773  \n",
-       "3                        87.400895  \n",
-       "4                        85.846808  \n",
-       "...                            ...  \n",
-       "6295                           NaN  \n",
-       "6296                           NaN  \n",
-       "6297                           NaN  \n",
-       "6298                           NaN  \n",
-       "6299                           NaN  \n",
-       "\n",
-       "[6300 rows x 122 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "meta =  pd.read_csv('sample_metadata.csv.gz')\n",
-    "meta\n"
+    "#GABA\n",
+    "gaba_l = [ 'Vip', 'Pvalb', 'Sst', 'Lamp5']\n",
+    "glu_l = ['L2-3_IT', 'L5_IT', 'L6_IT', 'L6_CT', 'L6_b']\n",
+    "ll = gaba_l + glu_l\n",
+    "for l in ll:\n",
+    "    os.mkdir('/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/gran1/' + l)"
    ]
   },
   {
