committing old batch scripts

--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 75,
    "id": "25dfd614",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:23:11) \\n[GCC 9.4.0]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,6 +38,7 @@
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
     "import scanpy as sc\n",
+    "import process_functions as pf\n",
     "#Import your modules\n",
     "#---------------------------------------\n",
     "sys.path.insert(1, '/cndd3/dburrows/CODE/admin_tools/')\n",
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "61d339ee",
    "metadata": {},
    "outputs": [
@@ -433,7 +442,7 @@
        "[9876 rows x 32 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,18 +1267,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e52f14d",
+   "execution_count": 72,
+   "id": "66e0c365",
    "metadata": {},
    "outputs": [],
    "source": [
-    "####### GRANULAR ######### -> merge together\n",
+    "### GRANULAR #########\n",
     "#Grab cell types from bigwig names \n",
     "path = '/cndd/emukamel/enformer/CEMBA_MOp_mc_bigwigs/bigwig'\n",
-    "name_l = [os.path.basename(i) for i in glob.glob(path+'/*ATAC*')]\n",
-    "name_l = [i.split('_') for i in name_l]\n",
-    "name_l"
+    "cg_l = [os.path.basename(i) for i in glob.glob(path+'/*ATAC*')]\n",
+    "cg_l = [i.split('_') for i in cg_l]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7c9f8006",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'Data': 'CG',\n",
+       "  'L2-3_IT': array(['C4_2_L2-3_IT_CG.bw', 'C4_1_L2-3_IT_CG.bw'], dtype='<U18'),\n",
+       "  'L5_IT': array(['C1_2_L5_IT_Rspo2_1_CG.bw', 'C1_1_L5_IT_Rspo1_1_CG.bw',\n",
+       "         'C3_2_L5_IT_S100b_CG.bw'], dtype='<U24'),\n",
+       "  'L6_IT': array(['C3_1_L6_IT_2_CG.bw', 'C3_3_L6_IT_Car3_CG.bw'], dtype='<U21'),\n",
+       "  'L6_CT': array(['C2_2_L6_CT_Cpa6_CG.bw', 'C2_1_L6_CT_Cpa6_CG.bw',\n",
+       "         'C2_3_L6_CT_Nxph2_Pou3f2_CG.bw'], dtype='<U29'),\n",
+       "  'L6b': array(['C8_3_L6b_Kcnip1_2_CG.bw', 'C8_2_L6b_Ror1_CG.bw',\n",
+       "         'C8_1_L6b_Shisa6_1_CG.bw'], dtype='<U23'),\n",
+       "  'Vip': array(['C6_3_Vip_Gpc3_CG.bw', 'C6_1_Vip_Chat_CG.bw'], dtype='<U19'),\n",
+       "  'Pvalb': array(['C5_1_Pvalb_Reln_CG.bw', 'C5_5_Pvalb_Vipr2_CG.bw',\n",
+       "         'C5_4_Pvalb_Gabrg1_CG.bw'], dtype='<U23'),\n",
+       "  'Sst': array(['C5_3_Sst_Calb2_CG.bw', 'C5_2_Sst_Myh8_2_CG.bw',\n",
+       "         'C10_1_Sst_Chodl_CG.bw'], dtype='<U21'),\n",
+       "  'Lamp5': array(['C6_4_Lamp5_Pdlim5_CG.bw', 'C6_6_Lamp5_Lhx6_CG.bw',\n",
+       "         'C6_2_Lamp5_Slc35d3_CG.bw'], dtype='<U24')},\n",
+       " {'Data': 'CAC',\n",
+       "  'L2-3_IT': array(['C4_2_L2-3_IT_CAC.bw', 'C4_1_L2-3_IT_CAC.bw'], dtype='<U19'),\n",
+       "  'L5_IT': array(['C1_1_L5_IT_Rspo1_1_CAC.bw', 'C3_2_L5_IT_S100b_CAC.bw',\n",
+       "         'C1_2_L5_IT_Rspo2_1_CAC.bw'], dtype='<U25'),\n",
+       "  'L6_IT': array(['C3_3_L6_IT_Car3_CAC.bw', 'C3_1_L6_IT_2_CAC.bw'], dtype='<U22'),\n",
+       "  'L6_CT': array(['C2_2_L6_CT_Cpa6_CAC.bw', 'C2_3_L6_CT_Nxph2_Pou3f2_CAC.bw',\n",
+       "         'C2_1_L6_CT_Cpa6_CAC.bw'], dtype='<U30'),\n",
+       "  'L6b': array(['C8_1_L6b_Shisa6_1_CAC.bw', 'C8_3_L6b_Kcnip1_2_CAC.bw',\n",
+       "         'C8_2_L6b_Ror1_CAC.bw'], dtype='<U24'),\n",
+       "  'Vip': array(['C6_1_Vip_Chat_CAC.bw', 'C6_3_Vip_Gpc3_CAC.bw'], dtype='<U20'),\n",
+       "  'Pvalb': array(['C5_1_Pvalb_Reln_CAC.bw', 'C5_5_Pvalb_Vipr2_CAC.bw',\n",
+       "         'C5_4_Pvalb_Gabrg1_CAC.bw'], dtype='<U24'),\n",
+       "  'Sst': array(['C5_3_Sst_Calb2_CAC.bw', 'C5_2_Sst_Myh8_2_CAC.bw'], dtype='<U22'),\n",
+       "  'Lamp5': array(['C6_6_Lamp5_Lhx6_CAC.bw', 'C6_4_Lamp5_Pdlim5_CAC.bw',\n",
+       "         'C6_2_Lamp5_Slc35d3_CAC.bw'], dtype='<U25')})"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#group mc data\n",
+    "gaba_l = [ 'Vip', 'Pvalb', 'Sst', 'Lamp5']\n",
+    "glu_l = ['L2-3_IT', 'L5_IT', 'L6_IT', 'L6_CT', 'L6b']\n",
+    "name_l = glu_l + gaba_l\n",
+    "name_l\n",
+    "\n",
+    "\n",
+    "#function to grab bw files\n",
+    "path = '/cndd/emukamel/enformer/CEMBA_MOp_mc_bigwigs/bigwig'\n",
+    "mode, name\n",
+    "cg = pf.group_bw(path, 'CG', name_l)\n",
+    "ch = pf.group_bw(path, 'CAC', name_l)\n",
+    "cg, ch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ba0d0a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1337,6 +1416,14 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5097648e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2027,17 +2114,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "70415197",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Data': 'ATAC',\n",
+       " 'L2-3_IT': array(['C4_2_L2-3_IT_ATAC.bw', 'C4_1_L2-3_IT_ATAC.bw'], dtype='<U20'),\n",
+       " 'L5_IT': array(['C1_1_L5_IT_Rspo1_1_ATAC.bw', 'C3_2_L5_IT_S100b_ATAC.bw',\n",
+       "        'C1_2_L5_IT_Rspo2_1_ATAC.bw'], dtype='<U26'),\n",
+       " 'L6_IT': array(['C3_3_L6_IT_Car3_ATAC.bw', 'C3_1_L6_IT_2_ATAC.bw'], dtype='<U23'),\n",
+       " 'L6_CT': array(['C2_3_L6_CT_Nxph2_Pou3f2_ATAC.bw', 'C2_1_L6_CT_Cpa6_ATAC.bw',\n",
+       "        'C2_2_L6_CT_Cpa6_ATAC.bw'], dtype='<U31'),\n",
+       " 'L6b': array(['C8_2_L6b_Ror1_ATAC.bw', 'C8_1_L6b_Shisa6_1_ATAC.bw',\n",
+       "        'C8_3_L6b_Kcnip1_2_ATAC.bw'], dtype='<U25'),\n",
+       " 'Vip': array(['C6_1_Vip_Chat_ATAC.bw', 'C6_3_Vip_Gpc3_ATAC.bw'], dtype='<U21'),\n",
+       " 'Pvalb': array(['C5_1_Pvalb_Reln_ATAC.bw', 'C5_4_Pvalb_Gabrg1_ATAC.bw',\n",
+       "        'C5_5_Pvalb_Vipr2_ATAC.bw'], dtype='<U25'),\n",
+       " 'Sst': array(['C10_1_Sst_Chodl_ATAC.bw', 'C5_3_Sst_Calb2_ATAC.bw',\n",
+       "        'C5_2_Sst_Myh8_2_ATAC.bw'], dtype='<U23'),\n",
+       " 'Lamp5': array(['C6_2_Lamp5_Slc35d3_ATAC.bw', 'C6_4_Lamp5_Pdlim5_ATAC.bw',\n",
+       "        'C6_6_Lamp5_Lhx6_ATAC.bw'], dtype='<U26')}"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "####### GRANULAR ######### -> merge together\n",
-    "#Grab cell types from bigwig names \n",
+    "#group mc data\n",
+    "gaba_l = [ 'Vip', 'Pvalb', 'Sst', 'Lamp5']\n",
+    "glu_l = ['L2-3_IT', 'L5_IT', 'L6_IT', 'L6_CT', 'L6b']\n",
+    "name_l = glu_l + gaba_l\n",
+    "name_l\n",
+    "\n",
+    "\n",
+    "#function to grab bw files\n",
     "path = '/cndd/emukamel/enformer/CEMBA_MOp_mc_bigwigs/bigwig'\n",
-    "name_l = [os.path.basename(i) for i in glob.glob(path+'/*ATAC*')]\n",
-    "name_l = [i.split('_') for i in name_l]\n",
-    "name_l"
+    "mode, name\n",
+    "atac = pf.group_bw(path, 'ATAC', name_l)\n",
+    "atac"
    ]
   },
   {
