--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "25dfd614",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:23:11) \\n[GCC 9.4.0]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,8 +37,10 @@
     "import numpy as np\n",
     "from multiprocessing import Pool\n",
     "from tqdm import tqdm\n",
+    "import process_functions as pf\n",
     "\n",
     "#Import your modules\n",
+    "\n",
     "#---------------------------------------\n",
     "sys.path.insert(1, '/cndd3/dburrows/CODE/admin_tools/')\n",
     "from admin_tools import admin_functions as adm\n",
@@ -59,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f139686d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#GABA\n",
     "gaba_l = [ 'Vip', 'Pvalb', 'Sst', 'Lamp5']\n",
-    "glu_l = ['L2-3_IT', 'L5_IT', 'L6_IT', 'L6_CT', 'L6_b']\n",
+    "glu_l = ['L2-3_IT', 'L5_IT', 'L6_IT', 'L6_CT', 'L6b']\n",
     "ll = gaba_l + glu_l\n",
     "for l in ll:\n",
-    "    os.mkdir('/cndd3/dburrows/DATA/splice/smartseq-rna_MOp_biccn/pseudobulk/gran1/' + l)"
+    "    os.mkdir('/cndd2/dburrows/DATA/splice/snmcseq-mc_MOp_biccn/pseudobulk/gran1/' + l)"
    ]
   },
   {
@@ -493,7 +503,7 @@
     }
    ],
    "source": [
-    "prac"
+    "/cndd2/dburrows/DATA/splice/snatacseq_MOp_biccn/pseudobulk"
    ]
   }
  ],
