pytorch env hell

--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "25dfd614",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Python version 3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:23:11) \n",
+      "[GCC 9.4.0]\n",
+      "Python path /home/dburrows/mambaforge/envs/pytorch1/bin/python\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:23:11) \\n[GCC 9.4.0]'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#CONDA ENV base_conda (python 3.9.7)\n",
+    "#CONDA ENV pytorch1 (python 3.9.7)\n",
     "#Import packages\n",
     "#---------------------------------------\n",
     "import sys\n",
@@ -36,9 +27,13 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "from multiprocessing import Pool\n",
-    "from tqdm import tqdm\n",
-    "import scanpy as sc\n",
     "import process_functions as pf\n",
+    "import pyBigWig as bw\n",
+    "import torch\n",
+    "from enformer_pytorch import Enformer, GenomeIntervalDataset\n",
+    "import polars as pl\n",
+    "\n",
+    "\n",
     "#Import your modules\n",
     "#---------------------------------------\n",
     "sys.path.insert(1, '/cndd3/dburrows/CODE/admin_tools/')\n",
@@ -46,7 +41,7 @@
     "\n",
     "# Define paths\n",
     "#----------------------------------------------------------------------\n",
-    "l_code = '/Users/dominicburrows/Dropbox/PhD/Analysis/my_scripts/GitHub/'\n",
+    "l_code = '/Users/domxinicburrows/Dropbox/PhD/Analysis/my_scripts/GitHub/'\n",
     "l_data = '/Users/dominicburrows/Dropbox/PhD/analysis/Project/'\n",
     "l_fig = '/Users/dominicburrows/Dropbox/PhD/figures/'\n",
     "\n",
@@ -55,13 +50,16 @@
     "s_fig = '/cndd3/dburrows/FIGS/'\n",
     "\n",
     "%load_ext autoreload\n",
-    "sys.version"
+    "print(f'Python version {sys.version}')\n",
+    "print(f'Python path {sys.executable}')"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ef6cfc27",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Generate pseudobulk mc"
    ]
@@ -988,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 8,
    "id": "09c71cac",
    "metadata": {},
    "outputs": [
@@ -999,14 +997,13 @@
        " ['/cndd/emukamel/enformer/CEMBA_MOp_mc_bigwigs/bigwig/C5_1_Pvalb_Reln_CAC.bw'])"
       ]
      },
-     "execution_count": 499,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Visualise mc tracks -> load bigwig files \n",
-    "import pyBigWig as bw\n",
     "path = '/cndd/emukamel/enformer/CEMBA_MOp_mc_bigwigs/bigwig'\n",
     "cg_l = glob.glob(f'{path}/*C5_1*CG.bw')\n",
     "ch_l = glob.glob(f'{path}/*C5_1*CAC.bw')\n",
@@ -1015,11 +1012,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "be491fa2-3ab9-4c4c-a03a-99b18d36ac49",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 195471971,\n",
+       " '2': 182113224,\n",
+       " '3': 160039680,\n",
+       " '4': 156508116,\n",
+       " '5': 151834684,\n",
+       " '6': 149736546,\n",
+       " '7': 145441459,\n",
+       " '8': 129401213,\n",
+       " '9': 124595110,\n",
+       " '10': 130694993,\n",
+       " '11': 122082543,\n",
+       " '12': 120129022,\n",
+       " '13': 120421639,\n",
+       " '14': 124902244,\n",
+       " '15': 104043685,\n",
+       " '16': 98207768,\n",
+       " '17': 94987271,\n",
+       " '18': 90702639,\n",
+       " '19': 61431566,\n",
+       " 'X': 171031299}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "head -5 gencode.vM3.chr_patch_hapl_scaff.annotation.gtf > prac && cat gencode.vM3.chr_1-19-X.annotation.gtf >> prac\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39b650e1-94ba-40fb-99b8-1f4f3c3da0d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 500,
    "id": "4370c6f1",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1162,9 +1205,7 @@
    "cell_type": "code",
    "execution_count": 540,
    "id": "e1dec740",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1428,7 +1469,9 @@
   {
    "cell_type": "markdown",
    "id": "1fd5d76c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Generate pseudobulk atac"
    ]
@@ -2082,9 +2125,7 @@
    "cell_type": "code",
    "execution_count": 602,
    "id": "49fe254f",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2162,7 +2203,9 @@
   {
    "cell_type": "markdown",
    "id": "4659a1c5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Estimate splice junctions from SMARTseq scRNA"
    ]
@@ -2720,9 +2763,7 @@
    "cell_type": "code",
    "execution_count": 107,
    "id": "474ea1a0",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "####### GRANULAR #########\n",
@@ -2807,10 +2848,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3e7866ff-eba7-4461-8765-17dba9d3c6aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enformer_pytorch import GenomeIntervalDataset\n",
+    "The kernel for deepNN_splice/data_process.ipynb appears to have died. It will restart automatically.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab80ae1-fde3-4084-b0c0-8b7d740270ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import enformer_pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1e59b048",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filter_train = lambda df: df.filter(pl.col('column_4') == 'train')\n",
+    "\n",
+    "ds = GenomeIntervalDataset(\n",
+    "    bed_file = './sequences.bed',                       # bed file - columns 0, 1, 2 must be <chromosome>, <start position>, <end position>\n",
+    "    fasta_file = './hg38.ml.fa',                        # path to fasta file\n",
+    "    filter_df_fn = filter_train,                        # filter dataframe function\n",
+    "    return_seq_indices = True,                          # return nucleotide indices (ACGTN) or one hot encodings\n",
+    "    shift_augs = (-2, 2),                               # random shift augmentations from -2 to +2 basepairs\n",
+    "    context_length = 196_608,\n",
+    "    # this can be longer than the interval designated in the .bed file,\n",
+    "    # in which case it will take care of lengthening the interval on either sides\n",
+    "    # as well as proper padding if at the end of the chromosomes\n",
+    "    chr_bed_to_fasta_map = {\n",
+    "        'chr1': 'chromosome1',  # if the chromosome name in the .bed file is different than the key name in the fasta file, you can rename them on the fly\n",
+    "        'chr2': 'chromosome2',\n",
+    "        'chr3': 'chromosome3',\n",
+    "        # etc etc\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "model = Enformer.from_hparams(\n",
+    "    dim = 1536,\n",
+    "    depth = 11,\n",
+    "    heads = 8,\n",
+    "    output_heads = dict(human = 5313, mouse = 1643),\n",
+    "    target_length = 896,\n",
+    ")\n",
+    "\n",
+    "seq = ds[0] # (196608,)\n",
+    "pred = model(seq, head = 'human') # (896, 5313)"
+   ]
   }
  ],
  "metadata": {
