--- a/workspace.ipynb
+++ b/workspace.ipynb
@@ -2,31 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "25dfd614",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_888548/2577744205.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'3.10.0 | packaged by conda-forge | (default, Nov 20 2021, 02:24:10) [GCC 9.4.0]'"
+       "'3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:23:11) \\n[GCC 9.4.0]'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,6 +57,66 @@
     "\n",
     "%load_ext autoreload\n",
     "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cb80c2ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R1\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_1.231023/QY_2252_S1_R1_001.fastq.gz\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_2.091223/QY2252_S1_L001_R1_001.fastq.gz\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_3.130224/QY_2252_3_S1_L007_R1_001.fastq.gz\n",
+      "R2\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_1.231023/QY_2252_S1_R2_001.fastq.gz\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_2.091223/QY2252_S1_L001_R2_001.fastq.gz\n",
+      "/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/QY_2252_3.130224/QY_2252_3_S1_L007_R2_001.fastq.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "out_path=/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/combined/\n",
+    "rm -rf $out_path*\n",
+    "suff=(\"R1\" \"R2\")\n",
+    "for s in ${suff[@]}\n",
+    "do\n",
+    "    path=/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/Q*/*$s*\n",
+    "    l=($(ls $path))\n",
+    "    echo \"Processing $s files\"\n",
+    "    for x in ${l[@]}\n",
+    "    do\n",
+    "        echo \"Adding $x to $s file\"\n",
+    "        zcat $x | cat >> ${out_path}${s}_combined.fastq\n",
+    "    done\n",
+    "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f064003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suff=(\"R1\" \"R2\")\n",
+    "for s in ${suff[@]}\n",
+    "do\n",
+    "    path=/cndd3/dburrows/DATA/neurotransmitter_switch/raw/pilot/Q*/*$s*\n",
+    "    l=($(ls $path))\n",
+    "    echo \"Processing $s files\"\n",
+    "    for x in ${l[@]}\n",
+    "    do\n",
+    "        echo \"Adding $x to $s file\"\n",
+    "        zcat $x | cat >> ${out_path}${s}_combined.fastq\n",
+    "    done\n",
+    "done"
    ]
   },
   {
@@ -529,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
